# definitely-not-an-ip-logger

./: .crates.toml  .crates2.json  .dockerignore  .gitignore  00-amg-site.conf  00-notiplog-site.conf  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
database/: amg_storage.sqlite3
migrations/: 00_amg-setup.sql  01_bot_flag.sql
src/: conversion_utils.rs  main.rs  template_models.rs
src/persistence/: mod.rs  user_info.rs
src/templates/: index.html
templates/: chat_bot.html  data_table.html  index.html
