[package]
name = "definitely-not-an-ip-logger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "notiplog-srv"
path = "src/main.rs"

[dependencies]
actix-files = "0.6.5"
actix-web = "4.11.0"
dotenv = "0.15.0"
handlebars = {version = "5.1.0", features=["dir_source"]} 
serde = {version = "1.0.196", features=["derive"]}
serde_json = "1.0.112"
time = {version = "0.3.34", features=["local-offset", "macros"]}
sqlx = {version = "0.8.6", features = [ "sqlite", "runtime-async-std", "time"]}
rand = "0.8.5"
